kubernetes/argocd/values/autobrr/autobrr-deployment.yaml
# Password : autobrr123*autobrr
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autobrr
  namespace: autobrr
spec:
  selector:
    matchLabels:
      app: autobrr
  replicas: 1
  template:
    metadata:
      labels:
        app: autobrr
        deployed_by: argocd
    spec:
      hostNetwork: true
      containers:
        - name: autobrr
          image: ghcr.io/autobrr/autobrr:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 7474
          resources:
            requests:
              memory: "512Mi"
          volumeMounts:
          - mountPath: /config
            name: autobrr-config
      volumes:
      - persistentVolumeClaim:
          claimName: autobrr-config
        name: autobrr-config
