kubernetes/argocd/values/autobrr/autobrr-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: autobrr
  namespace: autobrr
spec:
  type: ClusterIP
  ports:
    - port: 7474
      targetPort: 7474
  selector:
    app: autobrr
